<resources>
    <string name="app_name">SocialSport</string>
    <string name="error_inicio_sesion">Lo sentimos, ha ocurrido un error</string>
    <string name="facebook_app_id">1832997950361110</string>
    <string name="fb_login_protocol_scheme">fb1832997950361110</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_exit">Cerrar Sesión</string>

    <string name="crearEvento">Crear Evento</string>
    <string name="title_activity_crear_evento">Map</string>

    <string name="deporte">Deporte:</string>


    <string name="alpinismo">Alpinismo</string>
    <string name="andar">Andar</string>
    <string name="aquagym">Aquagym</string>
    <string name="atletismo">Atletismo</string>

    <string name="badminton">Badminton</string>
    <string name="baile">Baile</string>
    <string name="ballet">Ballet</string>
    <string name="baloncesto">Baloncesto</string>
    <string name="balonmano">Balonmano</string>
    <string name="barco">Barco</string>
    <string name="barranquismo">Barranquismo</string>
    <string name="beisbol">Beisbol</string>
    <string name="bodyboard">Bodyboard</string>
    <string name="boxeo">Boxeo</string>
    <string name="buceo">Buceo</string>

    <string name="cardioTr">Cardio</string>
    <string name="caza">Caza</string>
    <string name="ciclismo">Ciclismo</string>
    <string name="cometas">Cometas</string>
    <string name="crossTr">Cross</string>
    <string name="danza">Danza</string>
    <string name="dardos">Dardos</string>

    <string name="equitacion">Equitación</string>
    <string name="escalada">Escalada</string>
    <string name="esqui">Esquí</string>

    <string name="fitness">Fitness</string>
    <string name="flamenco">Flamenco</string>
    <string name="frontenis">Frontenis</string>
    <string name="futbol">Fútbol</string>
    <string name="futbolA">Fútbol Americano</string>
    <string name="gimnasia">Gimnasia</string>
    <string name="golf">Golf</string>

    <string name="hipica">Hípica</string>
    <string name="hockeyH">Hockey</string>
    <string name="jiu">Jiu-jitsu</string>
    <string name="judo">Judo</string>
    <string name="karate">Karate</string>
    <string name="kayak">Kayak</string>
    <string name="kite">Kite-Surf</string>

    <string name="marcha">Marcha</string>
    <string name="montana">Montaña</string>
    <string name="natacion">Natación</string>

    <string name="padel">Pádel</string>
    <string name="patinajeH">Patinaje Hielo</string>
    <string name="patines">Patines, Rollers</string>
    <string name="pelotaV">Pelota Vasca</string>
    <string name="pesca">Pesca</string>
    <string name="pescaS">Pesca submarina</string>
    <string name="petanca">Petanca</string>
    <string name="pilates">Pilates</string>
    <string name="pingPong">Ping-Pong</string>

    <string name="raid">Raid-Trail</string>
    <string name="raquetas">Raquetas de Nieve</string>
    <string name="rugby">Rugby</string>
    <string name="running">Running</string>

    <string name="senderismo">Senderismo</string>
    <string name="skate">Skate y Patinetes</string>
    <string name="skimboard">Skimboard</string>
    <string name="snorkel">Snorkel</string>
    <string name="snow">Snowboard</string>
    <string name="squash">Squash</string>
    <string name="stand">SUP-Stand Up Paddle</string>
    <string name="surf">Surf</string>

    <string name="tae">Tae Kwon Do</string>
    <string name="tenis">Tenis</string>
    <string name="tenisM">Tenis de Mesa</string>
    <string name="tiroP">Tiro al Plato</string>
    <string name="tiroA">Tiro con Arco</string>
    <string name="trail">Trail-Running</string>
    <string name="trek">Trekking</string>
    <string name="triatlon">Triatlón</string>

    <string name="vela">Vela, Barco</string>
    <string name="voley">Voleibol</string>
    <string name="voleyP">Voley playa</string>
    <string name="waker">Wakeboard, Esquí Nautico</string>
    <string name="windsurf">Windsurf</string>
    <string name="yoga">Yoga</string>

    <string name="precio">Precio</string>
    <string name="comentario">Comentario:</string>
    <string name="comentarios"><u>Comentarios</u></string>
    <string name="aceptar">Aceptar</string>
    <string name="social_sport">Social Sport</string>
    <string name="lo_sentimos">Lo sentimos, aún no disponemos de ningún evento con esas características</string>
    <string name="sin_suscripcion">Aún no te has suscrito a ningún evento</string>
    <string name="coste_por_participante">Coste por participante:</string>
    <string name="evento_participar">¿Desea participar en este evento?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="evento_abandonar">¿Seguro que deseas abandonar el evento?</string>
    <string name="evento_eliminar">Usted ha creado este evento, si lo abanda será eliminado</string>
    <string name="informacion">Información:</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="esqcribaAqui">Escriba aquí sus comentarios o información adicional.</string>
    <string name="terminos_condiciones"><u>Acepto los términos y condiciones</u></string>
    <string name="politica">politica</string>
    <string name="participantes"><u>Participantes</u></string>
    <string name="publico">Público</string>
    <string name="privado">Privado</string>
    <string name="restringido">Restringido</string>
    <string name="texto_publico">Cualquier usuario podrá unirse al evento.</string>
    <string name="texto_privado">Sólo usuarios con invitación podrán participar.</string>
    <string name="texto_restringido">Cualquiera podrá ver el evento, pero para poder unirse deberás autorizarlo.</string>
    <string name="evento_coste">Este evento tiene un coste</string>
    <string name="usuarios">Usuarios</string>
    <string name="invita">INVITA A TUS AMIGOS</string>
    <string name="no_comentarios">Aún no hay ningún comentario para este evento, se el primero en opinar sobre él.</string>
    <string name="escribe_comentario">Escribe un comentario&#8230;</string>
    <string name="a_las">a las</string>
    <string name="administrador">Administrador</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contrasena">Contraseña:</string>
    <string name="direccion_email">Dirección E-mail</string>
    <string name="direccion_email2">Dirección E-mail:</string>
    <string name="continuar_facebook">Continuar con Facebook</string>
    <string name="nuevo_registrate"><u>¿Nuevo? \nRegistrate</u></string>
    <string name="olvidado_contrasena">¿Has olvidado \nla contraseña?</string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="confirmar_contrasena">Confirmar contraseña:</string>

    <string name="passwords_tamaño">La contraseña debe de tener 6 o más caracteres</string>
    <string name="passwords_son_diferentes">La contraseña y su comprobación no coinciden</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="restablecer_contrasena">Restablecer Contraseña</string>
    <string name="restablecer">Restablecer</string>
    <string name="email_enviado">Se ha enviado un email de restablecimiento a</string>
    <string name="revise_bandeja">por favor revise su bandeja de entrada.</string>
    <string name="usuario">Usuario:</string>
    <string name="compruebe_email">Compruebe su dirección de email</string>
    <string name="verificar_email">y verifique el correo</string>
    <string name="no_sesion">Usuario sin sesión</string>
    <string name="hemos_enviado">Hemos enviado un email de verificación a la cuenta</string>
    <string name="perfil">Perfil</string>
    <string name="valoracion">Valoración:</string>
    <string name="solicitud_de_amistad">Solicitud de Amistad</string>
    <string name="chat">Chat</string>
    <string name="mensajes_vacio">La lista de mensajes está vacía</string>
    <string name="escribe_mensaje">Escribe aquí tu mensaje&#8230;</string>
    <string name="mensajes">Mensajes</string>
    <string name="recibidos">Recibidos</string>
    <string name="enviados">Enviados</string>
    <string name="eventos">Eventos</string>
    <string name="mis_eventos">Mis Eventos</string>
    <string name="peticion_enviada">Petición enviada</string>
    <string name="solicitud_amistad">le ha enviado una solicitud de amistad.</string>
    <string name="declinar">Declinar</string>
    <string name="ahora_amigos">y tú, ahora sois amigos</string>
    <string name="amigos">Amigos</string>
    <string name="compartir">Compartir</string>
    <string name="ayuda">Ayuda</string>
    <string name="grupos">Grupos</string>
    <string name="no_agregado_amigo">Aún no ha agregado a ningún amigo</string>
    <string name="no_grupo">Aún no perteneces a ningún grupo, puedes crear uno e invitar a tus amigos</string>
    <string name="sexo">Sexo:</string>
    <string name="hombre">Hombre</string>
    <string name="siguiente">Siguiente</string>
    <string name="omitir">Omitir</string>
    <string name="comenzar">Comenzar</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="editar">Editar</string>
    <string name="mujer">Mujer</string>
    <string name="otro">Otro</string>
    <string name="nueva_contrasena">Introduzca su nueva contraseña</string>
    <string name="enviar">Enviar</string>
    <string name="cambio_correcto">Contraseña cambiada correctamente</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="eliminar_amigo">Eliminar</string>
    <string name="amigo_eliminado">Amigo eliminado</string>
    <string name="valorar">Valorar</string>
    <string name="nombre_del_grupo">Nombre del Grupo</string>

</resources>
