<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackgraound"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <RelativeLayout
            android:id="@+id/layout_imagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imagenUsuario"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:paddingTop="16dp" />

            <TextView
                android:id="@+id/valoracion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagenUsuario"
                android:layout_centerHorizontal="true"
                android:paddingTop="15dp"
                android:text="@string/valoracion"
                android:textColor="@color/textColorSeconary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/valoracion"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="100%"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/layout_imagen"
            android:paddingLeft="15dp">

            <TextView
                android:id="@+id/textoNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/textColorSeconary"/>

            <TextView
                android:id="@+id/editTextNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textoNombre"
                android:textColor="@color/textColorPrimary"
                android:paddingBottom="15px"/>

            <TextView
                android:id="@+id/textoApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextNombre"
                android:text="@string/apellidos"
                android:textColor="@color/textColorSeconary" />

            <TextView
                android:id="@+id/editTextApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textoApellidos"
                android:textColor="@color/textColorPrimary"
                android:paddingBottom="15px"/>

            <TextView
                android:id="@+id/textoCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextApellidos"
                android:text="@string/direccion_email2"
                android:textColor="@color/textColorSeconary" />

            <TextView
                android:id="@+id/editTextCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textoCorreo"
                android:textColor="@color/textColorPrimary"
                android:paddingBottom="15px"/>

            <TextView
                android:id="@+id/textoSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextCorreo"
                android:text="@string/sexo"
                android:textColor="@color/textColorSeconary" />

            <RadioGroup
                android:id="@+id/perfilSexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textoSexo"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:paddingBottom="15px">

                <RadioButton
                    android:id="@+id/sexo_hombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/hombre"
                    android:textColor="@color/textColorPrimary" />

                <RadioButton
                    android:id="@+id/sexo_mujer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/mujer"
                    android:textColor="@color/textColorPrimary" />

                <RadioButton
                    android:id="@+id/sexo_otro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/otro"
                    android:textColor="@color/textColorPrimary" />

            </RadioGroup>

            <TextView
                android:id="@+id/textoFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/perfilSexo"
                android:text="@string/fecha_de_nacimiento"
                android:textColor="@color/textColorSeconary" />

            <TextView
                android:id="@+id/editFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textoFecha"
                android:inputType="date"
                android:onClick="showDatePickerDialog"
                android:textColor="@color/textColorPrimary"
                android:paddingBottom="15px"/>

            <Button
                android:id="@+id/boton_solicitud"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editFecha"
                android:layout_marginLeft="10dp"
                android:background="@color/colorAccent"
                android:text="@string/solicitud_de_amistad"
                android:textColor="@color/iconsTint"
                android:width="280px"/>

            <Button
                android:id="@+id/boton_valorar"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editFecha"
                android:layout_toRightOf="@+id/boton_solicitud"
                android:layout_marginLeft="10dp"
                android:background="@color/colorAccent"
                android:text="@string/valorar"
                android:textColor="@color/iconsTint" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>