<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/verEvento"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/rowBackgroun"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <RelativeLayout
        android:id="@+id/evento_ver_arriba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/evento_icono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

        <TextView
            android:id="@+id/evento_deporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/evento_localizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/evento_deporte"
            android:layout_marginRight="60dp"
            android:text="A Coruña"
            android:textColor="@color/textColorPrimary"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/evento_ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/evento_localizacion"
            android:layout_marginRight="60dp"
            android:textColor="@color/textColorSeconary"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/evento_coste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/evento_ubicacion"
            android:text="@string/coste_por_participante"
            android:textColor="@color/textColorSeconary"
            android:textSize="15dp" />


        <TextView
            android:id="@+id/evento_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/evento_ubicacion"
            android:layout_toRightOf="@+id/evento_coste"
            android:paddingLeft="10dp"
            android:textColor="@color/textColorSeconary"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/evento_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/evento_ubicacion"
            android:paddingLeft="10dp"
            android:textColor="@color/textColorPrimary"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/evento_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/evento_localizacion"
            android:paddingLeft="10dp"
            android:textColor="@color/textColorSeconary"
            android:textSize="15dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/expandible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/evento_ver_arriba"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/evento_texto_informacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/informacion"
            android:textColor="@color/textColorPrimary"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/evento_informacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/evento_texto_informacion"
            android:textColor="@color/textColorSeconary"
            android:textSize="15dp" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/evento_mapa"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/evento_opciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/unirse_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/ic_tick"
                android:tint="@color/iconsTint" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/eliminar_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/ic_borrar"
                android:tint="@color/iconsTint" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/compartir_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:src="@drawable/ic_compartir"
                android:tint="@color/iconsTint" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ver_comentarios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/comentarios"
                    android:textColor="@color/textColorPrimary" />

                <TextView
                    android:id="@+id/ver_participantes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/participantes"
                    android:textColor="@color/textColorPrimary" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>